[package]
name = "apollo-row"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "Row encodings for the Apollo DataFrame library"

[dependencies]
bitflags = { workspace = true }
bytemuck = { workspace = true }
apollo-buffer = { workspace = true }
apollo-compute = { workspace = true, features = ["cast"] }
apollo-dtype = { workspace = true }
apollo-error = { workspace = true }
apollo-utils = { workspace = true }

arrow = { workspace = true }

[dev-dependencies]
arrow = { workspace = true, features = ["proptest"] }
proptest = { workspace = true }

[lints]
workspace = true
