[package]
name = "apollo-schema"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "Private crate for schema utilities for the Apollo DataFrame library"

[dependencies]
indexmap = { workspace = true }
apollo-error = { workspace = true }
apollo-utils = { workspace = true }
schemars = { workspace = true, features = ["indexmap2"], optional = true }
serde = { workspace = true, optional = true }

[build-dependencies]
version_check = { workspace = true }

[features]
nightly = []
serde = ["dep:serde", "serde/derive", "apollo-utils/serde"]
dsl-schema = ["dep:schemars", "apollo-utils/dsl-schema"]

[lints]
workspace = true
