[package]
name = "apollo-stream"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "Private crate for the streaming execution engine for the Apollo DataFrame library"

[dependencies]
async-channel = { workspace = true }
async-trait = { workspace = true }
atomic-waker = { workspace = true }
bitflags = { workspace = true }
bytes = { workspace = true }
chrono-tz = { workspace = true }
crossbeam-channel = { workspace = true }
crossbeam-deque = { workspace = true }
crossbeam-queue = { workspace = true }
crossbeam-utils = { workspace = true }
futures = { workspace = true }
memmap = { workspace = true }
num-traits = { workspace = true }
parking_lot = { workspace = true }
percent-encoding = { workspace = true }
pin-project-lite = { workspace = true }
pyo3 = { workspace = true, optional = true }
rand = { workspace = true }
rayon = { workspace = true }
recursive = { workspace = true }
schemars = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
slotmap = { workspace = true }
tokio = { workspace = true, features = ["sync"] }

arrow = { workspace = true }
memchr = { workspace = true }
apollo-buffer = { workspace = true }
apollo-compute = { workspace = true }
apollo-core = { workspace = true, features = ["partition_by"] }
apollo-error = { workspace = true }
apollo-expr = { workspace = true, features = ["rle", "peaks", "arg_where", "unique_counts", "dtype-struct"] }
apollo-io = { workspace = true, features = ["async", "file_cache"] }
apollo-json = { workspace = true, optional = true }
apollo-mem-engine = { workspace = true }
apollo-ops = { workspace = true, features = ["rle", "peaks", "unique_counts", "dtype-struct", "search_sorted"] }
apollo-parquet = { workspace = true }
apollo-plan = { workspace = true, features = ["cse", "rle", "peaks", "arg_where", "unique_counts", "dtype-struct"] }
apollo-time = { workspace = true }
apollo-utils = { workspace = true }

[build-dependencies]
version_check = { workspace = true }

[features]
nightly = ["apollo-expr/nightly"]
approx_unique = ["apollo-plan/approx_unique", "apollo-expr/approx_unique"]
bigidx = ["apollo-core/bigidx"]
bitwise = ["apollo-core/bitwise", "apollo-plan/bitwise", "apollo-expr/bitwise"]
merge_sorted = ["apollo-plan/merge_sorted", "apollo-mem-engine/merge_sorted"]
dynamic_group_by = [
  "apollo-plan/dynamic_group_by",
  "apollo-expr/dynamic_group_by",
  "apollo-mem-engine/dynamic_group_by",
  "apollo-time/dtype-date",
  "apollo-time/dtype-datetime",
  "arrow/timezones",
]
strings = []
ipc = [
  "apollo-mem-engine/ipc",
  "apollo-plan/ipc",
  "apollo-io/ipc",
  "dep:serde_json",
]
parquet = ["apollo-mem-engine/parquet", "apollo-plan/parquet", "cloud"]
csv = ["apollo-mem-engine/csv", "apollo-plan/csv", "apollo-io/csv"]
json = [
  "apollo-mem-engine/json",
  "apollo-plan/json",
  "apollo-io/json",
  "dep:apollo-json",
]
scan_lines = [
  "apollo-mem-engine/scan_lines",
  "apollo-plan/scan_lines",
  "apollo-io/scan_lines",
]
cloud = ["apollo-mem-engine/cloud", "apollo-plan/cloud", "apollo-io/cloud"]
diff = ["apollo-ops/diff", "apollo-plan/diff", "apollo-plan/abs"]
dtype-array = ["apollo-core/dtype-array"]
dtype-u8 = ["apollo-core/dtype-u8", "apollo-plan/dtype-u8"]
dtype-u16 = ["apollo-core/dtype-u16", "apollo-plan/dtype-u16"]
dtype-u128 = ["apollo-core/dtype-u128", "apollo-plan/dtype-u128"]
dtype-i8 = ["apollo-core/dtype-i8", "apollo-plan/dtype-i8"]
dtype-i16 = ["apollo-core/dtype-i16", "apollo-plan/dtype-i16"]
dtype-i128 = ["apollo-core/dtype-i128", "apollo-plan/dtype-i128"]
dtype-f16 = ["apollo-core/dtype-f16", "apollo-plan/dtype-f16"]
dtype-date = ["apollo-core/dtype-date", "apollo-plan/dtype-date", "apollo-time/dtype-date"]
dtype-time = ["apollo-core/dtype-time", "apollo-plan/dtype-time", "apollo-time/dtype-time"]
dtype-datetime = ["apollo-core/dtype-datetime", "apollo-plan/dtype-datetime", "apollo-time/dtype-datetime"]
dtype-duration = ["apollo-core/dtype-duration", "apollo-plan/dtype-duration", "apollo-time/dtype-duration"]
dtype-categorical = ["apollo-core/dtype-categorical", "apollo-plan/dtype-categorical"]
dtype-decimal = ["apollo-core/dtype-decimal", "apollo-plan/dtype-decimal"]
dtype-extension = ["apollo-core/dtype-extension", "apollo-plan/dtype-extension"]
ewma = ["apollo-plan/ewma"]
mode = ["apollo-plan/mode"]
object = ["apollo-ops/object"]
physical_plan_visualization_schema = [
  "dep:schemars",
  "apollo-plan/dsl-schema",
  "apollo-utils/dsl-schema",
]
python = [
  "pyo3",
  "apollo-plan/python",
  "apollo-mem-engine/python",
  "apollo-error/python",
]
semi_anti_join = ["apollo-plan/semi_anti_join", "apollo-ops/semi_anti_join"]
is_in = ["apollo-ops/is_in", "apollo-plan/is_in", "semi_anti_join"]
replace = ["apollo-ops/replace", "apollo-plan/replace"]
range = ["apollo-plan/range"]
top_k = ["apollo-plan/top_k"]
cum_agg = ["apollo-plan/cum_agg", "apollo-ops/cum_agg"]

# We need to specify default features here to match workspace defaults.
# Otherwise we get warnings with cargo check/clippy.
default = ["bitwise"]

[lints]
workspace = true
